--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,15 @@ beautifulsoup4==4.11.2
 cachetools==5.2.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
+coreapi==2.3.3
+coreschema==0.0.4
 dj-rest-auth==7.0.1
 Django==5.0.13
 django-allauth==65.4.1
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
 drf-yasg==1.21.10
+drf-yasg2==1.19.4
 exceptiongroup==1.1.0
 flatbuffers==22.9.24
 gast==0.4.0
@@ -25,6 +28,8 @@ h11==0.14.0
 h5py==3.7.0
 idna==3.4
 inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.6
 keras==2.10.0
 Keras-Preprocessing==1.1.2
 libclang==14.0.6
@@ -52,6 +57,8 @@ PyYAML==6.0.2
 requests==2.28.2
 requests-oauthlib==1.3.1
 rsa==4.9
+ruamel.yaml==0.18.10
+ruamel.yaml.clib==0.2.12
 selenium==4.8.2
 six==1.16.0
 sniffio==1.3.0
