--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ charset-normalizer==2.1.1
 coreapi==2.3.3
 coreschema==0.0.4
 dj-rest-auth==7.0.1
+dj_database_url==2.3.0
 Django==5.0.13
 django-allauth==65.4.1
 djangorestframework==3.15.2
