--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ dj-rest-auth==7.0.1
 dj_database_url==2.3.0
 Django==5.0.13
 django-allauth==65.4.1
+django-cors-headers-4.7.0
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
 drf-yasg==1.21.10
